--- a/index.html
+++ b/index.html
@@ -3,84 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erotic Elegance</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f3f3f3;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            padding: 20px 0;
-            text-align: center;
-        }
-        nav {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-        }
-        nav a {
-            color: #fff;
-            padding: 14px 20px;
-            text-decoration: none;
-            text-align: center;
-        }
-        nav a:hover {
-            background-color: #555;
-        }
-        .container {
-            padding: 20px;
-        }
-        .section {
-            margin-bottom: 40px;
-        }
-        .section h2 {
-            border-bottom: 2px solid #444;
-            padding-bottom: 10px;
-        }
-        .cta-button {
-            background-color: #444;
-            color: #fff;
-            padding: 10px 20px;
-            text-align: center;
-            display: inline-block;
-            margin-top: 20px;
-            text-decoration: none;
-        }
-        .cta-button:hover {
-            background-color: #555;
-        }
-    </style>
+    <meta name="description" content="Discover luxurious and unique exotic dancewear at Erotic Elegance. Shop our collection of fishnet stockings, platform heels, and sexy costumes designed to make you shine.">
+    <meta name="keywords" content="exotic dancewear, fishnet stockings, platform heels, sexy costumes, luxury dancewear, exotic performance attire">
+    <title>Erotic Elegance - Exotic Dancewear Boutique</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Erotic Elegance</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#shop">Shop</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#faq">FAQ</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <a href="#about">About Us</a>
-        <a href="#products">Products</a>
-        <a href="#contact">Contact Information</a>
-    </nav>
-    <div class="container">
-        <div class="section" id="about">
-            <h2>About Us</h2>
-            <p>I’m an erotic dance wear boutique. I inspire people to embrace their individual sexuality by way of our erotic elegant fashion. I wish for them to experience freedom, empowerment, and luxury. I also encourage the release of shame and judgment when they join me as I build a community of a plethora of erotic people. We all desire the same thing: Freedom, Empowerment, & Luxury. Let’s get it with a smile.</p>
-        </div>
-        <div class="section" id="products">
-            <h2>Products</h2>
-            <p>Explore our wide range of erotic dance wear designed to make you feel empowered and luxurious. Our products are crafted with the finest materials to ensure comfort and style.</p>
-        </div>
-        <div class="section" id="contact">
-            <h2>Contact Information</h2>
-            <p>Phone: 971-420-6398</p>
-        </div>
-        <div class="section">
-            <h2>Join Our Community</h2>
-            <a href="https://your-chat-link-here.com" class="cta-button">Join Group Chat</a>
-        </div>
-    </div>
+    
+    <section id="home">
+        <h1>Welcome to Erotic Elegance</h1>
+        <p>Your Ultimate Exotic Dancewear Boutique</p>
+        <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
+        <a href="#shop" class="btn">Shop Now</a>
+    </section>
+    
+    <footer>
+        <p>&copy; 2024 Erotic Elegance. All rights reserved.</p>
+    </footer>
 </body>
 </html>
