--- a/about.html
+++ b/about.html
@@ -1,6 +1,29 @@
-<section id="about">
-    <h2>About Erotic Elegance</h2>
-    <p>Where Elegance Meets Seduction</p>
-    <p>At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy. Our curated collection of dancewear and accessories is crafted to highlight your unique style and grace. Join us in celebrating the art of exotic dance with sophistication and flair.</p>
-    <p><strong>Our Mission:</strong> To provide high-quality, luxurious dancewear that empowers you to shine on and off the stage.</p>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Us - Erotic Elegance</title>
+</head>
+<body>
+    <header>
+        <h1>About Erotic Elegance</h1>
+        <nav>
+            <a href="index.html">Home</a> | 
+            <a href="about.html">About Us</a> | 
+            <a href="shop.html">Shop</a> | 
+            <a href="blog.html">Blog</a> | 
+            <a href="contact.html">Contact Us</a> | 
+            <a href="faq.html">FAQ</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Where Elegance Meets Seduction</h2>
+        <p>At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy. Our curated collection of dancewear and accessories is crafted to highlight your unique style and grace. Join us in celebrating the art of exotic dance with sophistication and flair.</p>
+        <p><strong>Our Mission:</strong> To provide high-quality, luxurious dancewear that empowers you to shine on and off the stage.</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 Erotic Elegance | <a href="index.html">Back to Home</a></p>
+    </footer>
+</body>
+</html>
