--- a/index.html
+++ b/index.html
@@ -3,34 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Discover luxurious and unique exotic dancewear at Erotic Elegance. Shop our collection of fishnet stockings, platform heels, and sexy costumes designed to make you shine.">
-    <meta name="keywords" content="exotic dancewear, fishnet stockings, platform heels, sexy costumes, luxury dancewear, exotic performance attire">
-    <title>Erotic Elegance - Exotic Dancewear Boutique</title>
+    <title>Erotic Elegance - Home</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
+        <h1>Erotic Elegance</h1>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#shop">Shop</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-                <li><a href="#faq">FAQ</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="shop.html">Shop</a></li>
+                <li><a href="blog.html">Blog</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="faq.html">FAQ</a></li>
             </ul>
         </nav>
     </header>
-    
-    <section id="home">
-        <h1>Welcome to Erotic Elegance</h1>
-        <p>Your Ultimate Exotic Dancewear Boutique</p>
-        <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
-        <a href="#shop" class="btn">Shop Now</a>
-    </section>
-    
+
+    <main>
+        <section class="hero">
+            <h2>Your Ultimate Exotic Dancewear Boutique</h2>
+            <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine.</p>
+            <a href="shop.html" class="cta-button">Shop Now</a>
+        </section>
+    </main>
+
     <footer>
-        <p>&copy; 2024 Erotic Elegance. All rights reserved.</p>
+        <p>&copy; 2024 Erotic Elegance | <a href="index.html">Home</a></p>
     </footer>
 </body>
 </html>
