--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erotic Elegance - Home</title>
+    <meta name="description" content="Discover luxurious and unique exotic dancewear at Erotic Elegance. Shop our collection of fishnet stockings, platform heels, and sexy costumes designed to make you shine.">
+    <meta name="keywords" content="exotic dancewear, fishnet stockings, platform heels, sexy costumes, luxury dancewear, exotic performance attire">
+    <title>Erotic Elegance - Exotic Dancewear Boutique</title>
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Erotic Elegance</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -22,15 +25,11 @@
     </header>
 
     <main>
-        <section class="hero">
-            <h2>Your Ultimate Exotic Dancewear Boutique</h2>
-            <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine.</p>
-            <a href="shop.html" class="cta-button">Shop Now</a>
-        </section>
+        <!-- Main content specific to each page will go here -->
     </main>
 
     <footer>
-        <p>&copy; 2024 Erotic Elegance | <a href="index.html">Home</a></p>
+        <p>&copy; 2024 Erotic Elegance. All rights reserved.</p>
     </footer>
 </body>
 </html>
