--- a/index.html
+++ b/index.html
@@ -3,31 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erotic Elegance - Home</title>
+    <title>Erotic Elegance</title>
     <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Erotic Elegance</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="shop.html">Shop</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
-                <li><a href="faq.html">FAQ</a></li>
-            </ul>
-        </nav>
-    </header>
-    <section class="hero">
-        <h2>Your Ultimate Exotic Dancewear Boutique</h2>
-        <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine.</p>
-        <a href="shop.html" class="button">Shop Now</a>
-    </section>
-    <footer>
-        <p>&copy; 2024 Erotic Elegance. All Rights Reserved.</p>
-    </footer>
+
+<header>
+    <h1>Welcome to Erotic Elegance</h1>
+    <div class="navbar">
+        <a href="index.html">Home</a>
+        <a href="about.html">About Us</a>
+        <a href="shop.html">Shop</a>
+        <a href="blog.html">Blog</a>
+        <a href="contact.html">Contact Us</a>
+        <a href="faq.html">FAQ</a>
+    </div>
+    <div class="chandelier-border"></div>
+</header>
+
+<div class="container">
+    <h2>Your Ultimate Exotic Dancewear Boutique</h2>
+    <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
+    <button onclick="location.href='shop.html'">Shop Now</button>
+</div>
+
+<footer>
+    <div class="chandelier-border"></div>
+    <p>&copy; 2024 Erotic Elegance. All Rights Reserved.</p>
+</footer>
+
 </body>
 </html>
