--- a/index.html
+++ b/index.html
@@ -3,35 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erotic Elegance</title>
+    <title>Erotic Elegance - Home</title>
     <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<header>
-    <h1>Welcome to Erotic Elegance</h1>
-    <div class="navbar">
-        <a href="index.html">Home</a>
-        <a href="about.html">About Us</a>
-        <a href="shop.html">Shop</a>
-        <a href="blog.html">Blog</a>
-        <a href="contact.html">Contact Us</a>
-        <a href="faq.html">FAQ</a>
+    <!-- Include Header -->
+    <header>
+        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="header-border">
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="shop.html">Shop</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="faq.html">FAQ</a>
+        </nav>
+        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="header-border">
+    </header>
+
+    <div class="main-content">
+        <h1>Welcome to Erotic Elegance</h1>
+        <p>Your Ultimate Exotic Dancewear Boutique</p>
+        <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
+        <a href="shop.html" class="btn">Shop Now</a>
     </div>
-    <div class="chandelier-border"></div>
-</header>
 
-<div class="container">
-    <h2>Your Ultimate Exotic Dancewear Boutique</h2>
-    <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
-    <button onclick="location.href='shop.html'">Shop Now</button>
-</div>
-
-<footer>
-    <div class="chandelier-border"></div>
-    <p>&copy; 2024 Erotic Elegance. All Rights Reserved.</p>
-</footer>
+    <!-- Include Footer -->
+    <footer>
+        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="footer-border">
+        <p>&copy; 2024 Erotic Elegance. All Rights Reserved.</p>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="about.html">About Us</a>
+            <a href="shop.html">Shop</a>
+            <a href="blog.html">Blog</a>
+            <a href="contact.html">Contact Us</a>
+            <a href="faq.html">FAQ</a>
+        </nav>
+        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="footer-border">
+    </footer>
 
 </body>
 </html>
