--- a/index.html
+++ b/index.html
@@ -3,47 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Erotic Elegance - Home</title>
+    <title>Erotic Elegance</title>
     <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <!-- Include Header -->
     <header>
-        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="header-border">
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="shop.html">Shop</a>
-            <a href="blog.html">Blog</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="faq.html">FAQ</a>
-        </nav>
-        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="header-border">
+        <div class="header-content">
+            <h1>Erotic Elegance</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="shop.html">Shop</a>
+                <a href="blog.html">Blog</a>
+                <a href="contact.html">Contact Us</a>
+                <a href="faq.html">FAQ</a>
+            </nav>
+        </div>
     </header>
 
-    <div class="main-content">
-        <h1>Welcome to Erotic Elegance</h1>
-        <p>Your Ultimate Exotic Dancewear Boutique</p>
-        <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
-        <a href="shop.html" class="btn">Shop Now</a>
-    </div>
+    <main>
+        <section class="intro">
+            <h2>Welcome to Erotic Elegance</h2>
+            <p>Your Ultimate Exotic Dancewear Boutique</p>
+            <a href="shop.html" class="cta-button">Shop Now</a>
+        </section>
+    </main>
 
-    <!-- Include Footer -->
     <footer>
-        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="footer-border">
-        <p>&copy; 2024 Erotic Elegance. All Rights Reserved.</p>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about.html">About Us</a>
-            <a href="shop.html">Shop</a>
-            <a href="blog.html">Blog</a>
-            <a href="contact.html">Contact Us</a>
-            <a href="faq.html">FAQ</a>
-        </nav>
-        <img src="header-footer-border.svg" alt="Gold Chandelier Border" class="footer-border">
+        <div class="footer-content">
+            <p>&copy; 2024 Erotic Elegance | <a href="index.html">Home</a></p>
+        </div>
     </footer>
-
 </body>
 </html>
