--- a/about.html
+++ b/about.html
@@ -4,26 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Erotic Elegance</title>
+    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>About Erotic Elegance</h1>
-        <nav>
-            <a href="index.html">Home</a> | 
-            <a href="about.html">About Us</a> | 
-            <a href="shop.html">Shop</a> | 
-            <a href="blog.html">Blog</a> | 
-            <a href="contact.html">Contact Us</a> | 
-            <a href="faq.html">FAQ</a>
-        </nav>
+        <div class="header-content">
+            <h1>Erotic Elegance</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="about.html">About Us</a>
+                <a href="shop.html">Shop</a>
+                <a href="blog.html">Blog</a>
+                <a href="contact.html">Contact Us</a>
+                <a href="faq.html">FAQ</a>
+            </nav>
+        </div>
     </header>
+
     <main>
-        <h2>Where Elegance Meets Seduction</h2>
-        <p>At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy. Our curated collection of dancewear and accessories is crafted to highlight your unique style and grace. Join us in celebrating the art of exotic dance with sophistication and flair.</p>
-        <p><strong>Our Mission:</strong> To provide high-quality, luxurious dancewear that empowers you to shine on and off the stage.</p>
+        <section class="about">
+            <h2>About Erotic Elegance</h2>
+            <p>Where Elegance Meets Seduction. At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy. Our curated collection of dancewear and accessories is crafted to highlight your unique style and grace.</p>
+            <p>Our Mission: To provide high-quality, luxurious dancewear that empowers you to shine on and off the stage.</p>
+        </section>
     </main>
+
     <footer>
-        <p>&copy; 2024 Erotic Elegance | <a href="index.html">Back to Home</a></p>
+        <div class="footer-content">
+            <p>&copy; 2024 Erotic Elegance | <a href="index.html">Home</a></p>
+        </div>
     </footer>
 </body>
 </html>
