--- a/index.html
+++ b/index.html
@@ -4,36 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erotic Elegance</title>
-    <link href="https://fonts.googleapis.com/css2?family=Yatra+One&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <script src="/js/main.js" defer></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <style>
+        @font-face {
+            font-family: 'CustomFont';
+            src: url('/fonts/your-custom-font.ttf') format('truetype');
+        }
+    </style>
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <h1>Erotic Elegance</h1>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="about.html">About Us</a>
-                <a href="shop.html">Shop</a>
-                <a href="blog.html">Blog</a>
-                <a href="contact.html">Contact Us</a>
-                <a href="faq.html">FAQ</a>
-            </nav>
-        </div>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#shop">Shop</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#faq">FAQ</a></li>
+            </ul>
+        </nav>
     </header>
 
     <main>
-        <section class="intro">
-            <h2>Welcome to Erotic Elegance</h2>
+        <section id="home" class="page-section">
+            <h1 class="title">Welcome to Erotic Elegance</h1>
             <p>Your Ultimate Exotic Dancewear Boutique</p>
-            <a href="shop.html" class="cta-button">Shop Now</a>
+            <button class="cta-button">Shop Now</button>
+        </section>
+
+        <section id="about" class="page-section">
+            <h2>About Erotic Elegance</h2>
+            <p>Where Elegance Meets Seduction</p>
+            <p>At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy.</p>
+        </section>
+
+        <section id="shop" class="page-section">
+            <h2>Shop</h2>
+            <div class="product">
+                <h3>Lustrous Lace Bodysuit</h3>
+                <p>Price: $49.99</p>
+                <button>Add to Cart</button>
+            </div>
+        </section>
+
+        <section id="blog" class="page-section">
+            <h2>Blog</h2>
+            <p>Mastering the Art of Seduction on Stage</p>
+        </section>
+
+        <section id="contact" class="page-section">
+            <h2>Contact Us</h2>
+            <form>
+                <input type="text" placeholder="Your Name" required>
+                <input type="email" placeholder="Your Email" required>
+                <textarea placeholder="Your Message" required></textarea>
+                <button type="submit">Send Message</button>
+            </form>
+        </section>
+
+        <section id="faq" class="page-section">
+            <h2>FAQ</h2>
+            <p>How can I place an order?</p>
+            <p>Browse our shop, add items to your cart, and proceed to checkout. It’s that simple!</p>
         </section>
     </main>
 
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2024 Erotic Elegance | <a href="index.html">Home</a></p>
-        </div>
+        <p>&copy; 2024 Erotic Elegance</p>
     </footer>
 </body>
 </html>
