--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <style>
         @font-face {
             font-family: 'CustomFont';
-            src: url('/fonts/your-custom-font.ttf') format('truetype');
+            src: url('/fonts/PinyonScript-Regular.ttf') format('truetype');
         }
     </style>
 </head>
