--- a/index.html
+++ b/index.html
@@ -4,76 +4,82 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Erotic Elegance</title>
-    <link rel="stylesheet" href="/css/style.css">
-    <script src="/js/main.js" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="stylesheet" href="CSS/styles.css">
     <style>
         @font-face {
             font-family: 'CustomFont';
-            src: url('/fonts/PinyonScript-Regular.ttf') format('truetype');
+            src: url('font/your-font-file.woff2') format('woff2');
+            font-weight: normal;
+            font-style: normal;
         }
     </style>
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About Us</a></li>
-                <li><a href="#shop">Shop</a></li>
-                <li><a href="#blog">Blog</a></li>
-                <li><a href="#contact">Contact Us</a></li>
-                <li><a href="#faq">FAQ</a></li>
-            </ul>
-        </nav>
+        <div class="header-content">
+            <h1>Erotic Elegance</h1>
+            <nav>
+                <ul>
+                    <li><a href="#home" onclick="loadPage('home')">Home</a></li>
+                    <li><a href="#about" onclick="loadPage('about')">About Us</a></li>
+                    <li><a href="#shop" onclick="loadPage('shop')">Shop</a></li>
+                    <li><a href="#blog" onclick="loadPage('blog')">Blog</a></li>
+                    <li><a href="#contact" onclick="loadPage('contact')">Contact Us</a></li>
+                    <li><a href="#faq" onclick="loadPage('faq')">FAQ</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
-    <main>
-        <section id="home" class="page-section">
-            <h1 class="title">Welcome to Erotic Elegance</h1>
-            <p>Your Ultimate Exotic Dancewear Boutique</p>
-            <button class="cta-button">Shop Now</button>
-        </section>
-
-        <section id="about" class="page-section">
-            <h2>About Erotic Elegance</h2>
-            <p>Where Elegance Meets Seduction</p>
-            <p>At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy.</p>
-        </section>
-
-        <section id="shop" class="page-section">
-            <h2>Shop</h2>
-            <div class="product">
-                <h3>Lustrous Lace Bodysuit</h3>
-                <p>Price: $49.99</p>
-                <button>Add to Cart</button>
-            </div>
-        </section>
-
-        <section id="blog" class="page-section">
-            <h2>Blog</h2>
-            <p>Mastering the Art of Seduction on Stage</p>
-        </section>
-
-        <section id="contact" class="page-section">
-            <h2>Contact Us</h2>
-            <form>
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" required></textarea>
-                <button type="submit">Send Message</button>
-            </form>
-        </section>
-
-        <section id="faq" class="page-section">
-            <h2>FAQ</h2>
-            <p>How can I place an order?</p>
-            <p>Browse our shop, add items to your cart, and proceed to checkout. It’s that simple!</p>
-        </section>
+    <main id="content">
+        <!-- Content will be loaded here dynamically -->
     </main>
 
     <footer>
-        <p>&copy; 2024 Erotic Elegance</p>
+        <p>&copy; 2024 Erotic Elegance. All rights reserved.</p>
     </footer>
+
+    <script>
+        const pages = {
+            'home': `
+                <section id="home">
+                    <h2>Welcome to Erotic Elegance</h2>
+                    <p>Your Ultimate Exotic Dancewear Boutique. Discover our exquisite collection designed for those who dare to shine.</p>
+                    <a href="#shop" onclick="loadPage('shop')" class="cta-button">Shop Now</a>
+                </section>`,
+            'about': `
+                <section id="about">
+                    <h2>About Us</h2>
+                    <p>Where Elegance Meets Seduction. We believe every performer deserves to feel confident, empowered, and irresistibly sexy.</p>
+                </section>`,
+            'shop': `
+                <section id="shop">
+                    <h2>Shop</h2>
+                    <p>Browse our curated collection of luxurious dancewear, from fishnet stockings to platform heels and sexy costumes.</p>
+                </section>`,
+            'blog': `
+                <section id="blog">
+                    <h2>Blog</h2>
+                    <p>Explore tips, tricks, and insights in our blog. From performance guides to self-care rituals, we cover it all.</p>
+                </section>`,
+            'contact': `
+                <section id="contact">
+                    <h2>Contact Us</h2>
+                    <p>Have questions or need assistance? Reach out to us through our contact form or follow us on social media.</p>
+                </section>`,
+            'faq': `
+                <section id="faq">
+                    <h2>FAQ</h2>
+                    <p>Find answers to your most common questions about our products, shipping, and returns.</p>
+                </section>`
+        };
+
+        function loadPage(page) {
+            document.getElementById('content').innerHTML = pages[page];
+        }
+
+        // Load the home page by default
+        loadPage('home');
+    </script>
 </body>
 </html>
