--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: 'CustomFont';
-            src: url('font/PinyonScript-Regular.ttf') format('ttf');
+            src: url('./font/PinyonScript-Regular.ttf') format('woff2');
             font-weight: normal;
             font-style: normal;
         }
