--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         @font-face {
             font-family: 'CustomFont';
-            src: url('./fonts/AMERIKAA.ttf') format('embedded-opentype'),
+            src: url('./fonts/AMERIKAA.ttf'),
             src: url('./fonts/AMERIKAA.ttf') format('woff2'),
             src: url('./fonts/AMERIKAA.ttf') format('woff'),
             src: url('./fonts/AMERIKAA.ttf') format('truetype'),
