--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <style>
         @font-face {
             font-family: 'CustomFont';
-            src: url('../fonts/AMERIKAA.ttf') format('embedded-opentype'),
-            src: url('../fonts/AMERIKAA.ttf') format('woff2'),
-            src: url('../fonts/AMERIKAA.ttf') format('woff'),
-            src: url('../fonts/AMERIKAA.ttf') format('truetype'),
-            src: url('../fonts/AMERIKAA.ttf') format('svg');
+            src: url('../fonts/PinyonScript-Regular.ttf') format('embedded-opentype'),
+            src: url('../fonts/PinyonScript-Regular.ttf') format('woff2'),
+            src: url('../fonts/PinyonScript-Regular.ttf') format('woff'),
+            src: url('../fonts/PinyonScript-Regular.ttf') format('truetype'),
+            src: url('../fonts/PinyonScript-Regular.ttf') format('svg');
             font-weight: normal;
             font-style: normal;
         }
