--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Erotic Elegance</title>
   <link rel="stylesheet" href="CSS/styles.css">
-  <link rel="preload" href="font/custom-font.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="font/PinyonScript-Regular.ttf" as="font" type="font/woff2" crossorigin="anonymous">
   <style>
 @font-face {
             font-family: 'CustomFont';
