--- a/index.html
+++ b/index.html
@@ -1,94 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Erotic Elegance</title>
-  <link rel="stylesheet" href="CSS/styles.css">
-  <link rel="preload" href="font/PinyonScript-Regular.ttf" as="font" type="font/woff2" crossorigin="anonymous">
-  <style>
-@font-face {
-            font-family: 'CustomFont';
-            src: url("../font/PinyonScript-Regular.ttf") format('embedded-opentype'),
-            src: url("../font/PinyonScript-Regular.ttf") format('woff2'),
-            src: url("../font/PinyonScript-Regular.ttf") format('woff'),
-            src: url("../font/PinyonScript-Regular.ttf") format('truetype'),
-            src: url("../font/PinyonScript-Regular.ttf") format('svg');
-            font-weight: normal;
-            font-style: normal;
-        }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Discover luxurious and unique exotic dancewear at Erotic Elegance. Shop our collection of fishnet stockings, platform heels, and sexy costumes designed to make you shine.">
+    <title>Erotic Elegance - Exotic Dancewear Boutique</title>
+    <link rel="stylesheet" href="CSS/styles.css">
+    <script>
+        // Asynchronous Font Loading
+        const loadFont = () => {
+            const link = document.createElement('link');
+            link.href = 'font/PinyonScript-Regular.ttf';
+            link.rel = 'stylesheet';
+            document.head.appendChild(link);
+        };
+        loadFont();
+    </script>
 </head>
 <body>
-  <header class="site-header">
-    <h1 class="site-title">Erotic Elegance</h1>
-    <nav class="site-nav">
-      <a href="#home">Home</a>
-      <a href="#about">About Us</a>
-      <a href="#shop">Shop</a>
-      <a href="#blog">Blog</a>
-      <a href="#contact">Contact Us</a>
-      <a href="#faq">FAQ</a>
-    </nav>
-  </header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#shop">Shop</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+                <li><a href="#faq">FAQ</a></li>
+            </ul>
+        </nav>
+        <h1>Erotic Elegance</h1>
+    </header>
 
-  <main>
-    <section id="home" class="section">
-      <h2>Welcome to Erotic Elegance</h2>
-      <p>Your Ultimate Exotic Dancewear Boutique</p>
-      <a href="#shop" class="btn">Shop Now</a>
-    </section>
+    <main id="content">
+        <!-- Home Section -->
+        <section id="home" class="section">
+            <h2>Welcome to Erotic Elegance</h2>
+            <p>Your Ultimate Exotic Dancewear Boutique</p>
+            <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
+            <a href="#shop" class="cta-button">Shop Now</a>
+        </section>
 
-    <section id="about" class="section">
-      <h2>About Us</h2>
-      <p>Where Elegance Meets Seduction</p>
-      <p>At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy.</p>
-    </section>
+        <!-- About Us Section -->
+        <section id="about" class="section">
+            <h2>About Erotic Elegance</h2>
+            <p>Where Elegance Meets Seduction</p>
+            <p>At Erotic Elegance, we believe every performer deserves to feel confident, empowered, and irresistibly sexy. Our curated collection of dancewear and accessories is crafted to highlight your unique style and grace.</p>
+        </section>
 
-    <section id="shop" class="section">
-      <h2>Shop</h2>
-      <p>Discover our stunning collection of dancewear and accessories.</p>
-      <!-- Add product listings here -->
-    </section>
+        <!-- Shop Section -->
+        <section id="shop" class="section">
+            <h2>Shop</h2>
+            <div class="product">
+                <h3>Fishnet Stockings</h3>
+                <p>Unleash your inner vixen with our sultry fishnet stockings, designed to captivate and enchant.</p>
+            </div>
+            <div class="product">
+                <h3>Platform Heels</h3>
+                <p>Step up your game with our stunning platform heels, perfect for adding height and drama to your performance.</p>
+            </div>
+            <div class="product">
+                <h3>Sexy Costumes</h3>
+                <p>Transform into your fantasy with our daring and unique costumes, tailored to make you the star of the show.</p>
+            </div>
+        </section>
 
-    <section id="blog" class="section">
-      <h2>Blog</h2>
-      <p>Insights and tips from the world of exotic dance.</p>
-      <!-- Add blog posts here -->
-    </section>
+        <!-- Blog Section -->
+        <section id="blog" class="section">
+            <h2>Blog</h2>
+            <article>
+                <h3>Mastering the Art of Seduction on Stage</h3>
+                <p>Dive into the world of exotic dance with our tips, tricks, and insights.</p>
+            </article>
+            <article>
+                <h3>Top 5 Self-Care Rituals for Performers</h3>
+                <p>Stay in top shape with our essential self-care tips.</p>
+            </article>
+        </section>
 
-    <section id="contact" class="section">
-      <h2>Contact Us</h2>
-      <p>We're here to assist you with any questions or needs.</p>
-      <form>
-        <input type="text" placeholder="Name">
-        <input type="email" placeholder="Email">
-        <textarea placeholder="Message"></textarea>
-        <button type="submit" class="btn">Send</button>
-      </form>
-    </section>
+        <!-- Contact Us Section -->
+        <section id="contact" class="section">
+            <h2>Contact Us</h2>
+            <form>
+                <label for="name">Name:</label>
+                <input type="text" id="name" name="name">
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email">
+                <label for="message">Message:</label>
+                <textarea id="message" name="message"></textarea>
+                <button type="submit">Send</button>
+            </form>
+        </section>
 
-    <section id="faq" class="section">
-      <h2>FAQ</h2>
-      <p>Frequently Asked Questions</p>
-      <!-- Add FAQ content here -->
-    </section>
-  </main>
+        <!-- FAQ Section -->
+        <section id="faq" class="section">
+            <h2>Frequently Asked Questions</h2>
+            <details>
+                <summary>How can I place an order?</summary>
+                <p>Browse our shop, add items to your cart, and proceed to checkout. It’s that simple!</p>
+            </details>
+            <details>
+                <summary>What are your shipping options?</summary>
+                <p>We offer standard and express shipping worldwide.</p>
+            </details>
+            <details>
+                <summary>Can I return or exchange an item?</summary>
+                <p>Yes, we accept returns and exchanges within 30 days of purchase.</p>
+            </details>
+            <details>
+                <summary>How do I care for my dancewear?</summary>
+                <p>Follow the care instructions on each product page to ensure your dancewear stays in perfect condition.</p>
+            </details>
+        </section>
+    </main>
 
-  <footer class="site-footer">
-    <p>&copy; 2024 Erotic Elegance. All rights reserved.</p>
-  </footer>
+    <footer>
+        <p>&copy; 2024 Erotic Elegance. All rights reserved.</p>
+    </footer>
 
-  <script>
-    // Single Page Application (SPA) Navigation
-    document.querySelectorAll('nav a').forEach(anchor => {
-      anchor.addEventListener('click', function(e) {
-        e.preventDefault();
-        document.querySelector(this.getAttribute('href')).scrollIntoView({
-          behavior: 'smooth'
-        });
-      });
-    });
-  </script>
+    <script src="app.js"></script>
 </body>
 </html>
