--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main id="main-content">
         <section id="home" class="content-section">
             <h1 class="title">Welcome to Erotic Elegance</h1>
-            <p>Your Ultimate Exotic Dancewear Boutique</p>
+            <h2>Your Ultimate Exotic Dancewear Boutique</h2>
             <p>Step into a world where luxury meets allure. Discover our exquisite collection designed for those who dare to shine. From fishnet stockings to platform heels, find the perfect pieces to elevate your performance and express your individuality.</p>
             <a href="#shop" class="cta" onclick="navigateTo('shop')">Shop Now</a>
         </section>
